# mollusk

./: .gitignore  README.md  pyproject.toml
docs/architecture/: class-diagram.md  domain-model-doc.md  graph-db-with-sql-escape-hatch.md
docs/spike/: graph_item.py
scratch/: core.py  core2.py
src/mollusk/: __init__.py  cli.py  database.py  item.py  logging_utils.py  models.py  repository.py  settings.py  storage.py
src/mollusk/templates/new_project/: settings.py
src/mollusk/templates/new_repository/: README.md  __init__.py
tests/: __init__.py  conftest.py  test_init_command.py
