[project]
name = "mollusk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Graham Hukill", email = "ghukill@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.21",
    "click>=8.1.8",
    "sqlalchemy>=2.0.39",
]

[project.scripts]
mollusk = "mollusk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.setuptools.package-data]
mollusk = ["templates/settings.py"]

[tool.ruff]
target-version = "py313"
line-length = 90
show-fixes = true
exclude = []

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    "D100",
    "D101",
    "D103",
    "D104",
    "G004"
]

fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"
